--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -34,14 +34,16 @@ include _mixins.pug
 					+search-form('footer-search', '')
 				.footer-more-info
 					.content-area
-						p Взаимодействие между клиентом и компанией по вопросам предоставления услуги происходит посредством электронной почты &#32;
-							a(href="mailto:sales@vdc.by")
-								strong sales@vdc.by
-							|&nbsp;и мобильного номера &#32;
-							a(href="tel:411")
-								strong 411-6
-							|.
-						p При отправлении сообщений на данный адрес в теме письма необходимо указывать номер договора.
+						p
+							small Взаимодействие между клиентом и компанией по вопросам предоставления услуги происходит посредством электронной почты &#32;
+								a(href="mailto:sales@vdc.by")
+									strong sales@vdc.by
+								|&nbsp;и мобильного номера &#32;
+								a(href="tel:411")
+									strong 411-6
+								|.
+						p
+							small При отправлении сообщений на данный адрес в теме письма необходимо указывать номер договора.
 .footer-links
 	.box
 		.footer-services
