--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -15,11 +15,12 @@
 		width: 100%
 		max-width: 90%
 .form-content
-	.form-content-head
+	&-head
 		font-size: 16px
 		color: #000000
 		font-weight: bold
 		margin-bottom: 25px
+		padding: 0 3px;
 	&-devider
 		border: none
 		width: 100%
